ajout d'un paragraphe sur un pan de ma vie

--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,14 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<div>
+			<p> Depuis le début de cette année le désir de changer de profession me hante.
+				J'ai décidé, durant l'été 2022, de prendre ma vie en main 
+				et de réaliser un de compétence qui s'est relativement bien passé. Le conseillé était 
+				compétent et à la l'écoute de mes besoins. Nous avons pu définir le profil type de ma 
+				personnalité et les grandes lignes de mon projet principal.</p>
+		</div>
 		
 	
 </body></html>
