--- a/hello.html
+++ b/hello.html
@@ -16,13 +16,19 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-
+		<!-- description-->
 		<div>
+			<h1>Ma description</h1>
 			<p> Depuis le début de cette année le désir de changer de profession me hante.
 				J'ai décidé, durant l'été 2022, de prendre ma vie en main 
 				et de réaliser un de compétence qui s'est relativement bien passé. Le conseillé était 
 				compétent et à la l'écoute de mes besoins. Nous avons pu définir le profil type de ma 
 				personnalité et les grandes lignes de mon projet principal.</p>
+		</div>
+		<!--  récompence -->
+		<div>
+		<h1>Mes récompences </h1>
+		<p> en construction ...</p> 
 		</div>
 		
 	
