ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -29,6 +29,10 @@
 		<div>
 		<h1>Mes récompences </h1>
 		<p> en construction ...</p> 
+		<!--  Gist -->
+		<div>
+			<h1>Mon gist</h1>
+			<p><script src="https://gist.github.com/LawsonGod/e8a1acb9d417f7d98cf346549d31d185.js"></script></p> 
 		</div>
 		
 	
