--- a/hello.html
+++ b/hello.html
@@ -28,7 +28,7 @@
 		<!--  récompence -->
 		<div>
 		<h1>Mes récompences </h1>
-		<p> en construction ...</p> 
+		<p> En construction ...</p> 
 		<!--  Gist -->
 		<div>
 			<h1>Mon gist</h1>
