#2:Ajout des images et modif. du Hello

--- a/hello.html
+++ b/hello.html
@@ -27,8 +27,8 @@
 		</div>
 		<!--  récompence -->
 		<div>
-		<h1>Mes récompences </h1>
-		<p> En construction ...</p> 
+		<h1>Mes récompenses </h1>
+		<p> <img src="image/medal_bronze.png" alt=""></p> 
 		<!--  Gist -->
 		<div>
 			<h1>Mon gist</h1>
