#2: ajout d'images et d'une modif du hello

--- a/hello.html
+++ b/hello.html
@@ -28,7 +28,7 @@
 		<!--  récompence -->
 		<div>
 		<h1>Mes récompenses </h1>
-		<p> <img src="image/medal_bronze.png" alt=""></p> 
+		<p> <img src="images/medal_bronze.png" alt=""></p> 
 		<!--  Gist -->
 		<div>
 			<h1>Mon gist</h1>
