ajout de commande git push

--- a/hello.html
+++ b/hello.html
@@ -34,6 +34,11 @@
 			<h1>Mon gist</h1>
 			<p><script src="https://gist.github.com/LawsonGod/e8a1acb9d417f7d98cf346549d31d185.js"></script></p> 
 		</div>
+		<!-- commandes git-->
+		<div>
+			<h1>Mes commande git</h1>
+			<p>git push</p> 
+		</div>
 		
 	
 </body></html>
